Jar-in-Jar: Throw when only incompatible version ranges were specified (#30)
For example, Gradle allows `[1.0,2.0[`, but Maven insists on
`[1.0,2.0)`.